--- a/checklistAdmin-alt.html
+++ b/checklistAdmin-alt.html
@@ -17,6 +17,9 @@ id="todo"
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
 <style>
+#admin-panel {
+  margin: 25px;
+}
 h1 { padding: .2em; margin: 0; }
 #admin-panel ol { margin: 0 !important; padding: 0 !important; }
 .ui-widget-header {
@@ -25,26 +28,18 @@ h1 { padding: .2em; margin: 0; }
   font-weight: 400;
   color: #333333;
 }
-#checklist .pbTitle {
-  padding: 5px 12px !important;
-}
-#checklist .pbSubsection {
-  padding: 7px 12px !important;
-}
-#footer {
-  border-top: none;
-}
-#footer .pbBottomButtons {
-  margin: 0;
+.note {
+  color: #B3B3B3;
 }
 #admin-panel li {
   list-style-type: none;
   padding: 30px;
-  margin: 15px 0 !important;
+  margin: 0 !important;
   color: #333333;
   background: #FFFFFF;
   border: 1px solid #CCCCCC;
-  border-radius: 7px;
+  border-top: 5px solid #8cd250;
+  border-radius: 5px;
 }
 #checklist-edit {
   margin-right: 200px;
@@ -59,6 +54,7 @@ h1 { padding: .2em; margin: 0; }
   padding: 30px;
   width: 100%;
   margin-left: -10px;
+  border-top: 20px solid #BBDDBB !important;
 }
 .form-info, .border-light {
   list-style-type: none;
@@ -77,6 +73,10 @@ label {
 .question {
   width: 400px;
 }
+input[type="button"], input[type="submit"] {
+  font-size: 16px !important;
+  margin-right: 5px;
+}
 </style>
 <script>
 $(function() {
@@ -93,73 +93,25 @@ $(function() {
 </head>
 <body>
 <div id="admin-panel" ng-controller="AdminCtrl">
-  <div class="bPageTitle">
-    <div class="ptBody">
-      <div class="content">
-        <div class="pageTitleIcon" title="Products"></div>
-        <h1 class="pageType">Checklist Edit<span class="titleSeparatingColon">:</span></h1>
-        <h2 class="pageDescription"> New Checklist</h2>
-      </div>
-    </div>
-  </div>
-  <div class="bDescription"> Drag and drop questions to re-order them. </div>
-  <div class="bPageBlock brandSecondaryBrd bEditBlock secondaryPalette" id="checklist">
-    <div class="pbHeader">
-      <table border="0" cellpadding="0" cellspacing="0">
-        <tbody>
-          <tr> 
-            <td class="pbTitle" id="checklistTitle"> 
-              <h2 class="mainTitle" style="font-size: 14px;">Checklist Edit</h2>
-            </td>
-            <td class="pbButton" id="topButtonRow">
-              <input type="submit" class="btn" value="Save" ng-click="newChecklist()"> </input>
-              <input type="button" class="btn" value="Add Question" ng-click="addQuestion()"></input>
-              <input type="submit" class="btn" value="Cancel"> </input>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="pbBody">
-      <div class="pbSubsection">
-        <table class="detailList" border="0" cellpadding="0" cellspacing="0">
-          <tbody>
-            <tr>
-              <td class="labelCol requiredInput">
-                <label for="Name"><span class="requiredMark">*</span>Checklist Name</label>
-              </td>
-              <td class="data2Col" colspan="3">
-                <div class="requiredInput">
-                  <div class="requiredBlock">
-                  </div>
-                  <input id="Name" maxlength="255" size="20" tabindex="1" type="text" ng-model="checklist.name" name="formName" ng-required="true"/>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td class="labelCol last">
-                <label for="Description">Checklist Description</label>
-                <div class="textCounterOuter">
-                  <div class="textCounterMiddle">
-                    <div class="textCounter" id="Description_counter">4000 remaining</div>
-                  </div>
-                </div>
-              </td>
-              <td class="data2Col last" colspan="3">
-                <textarea cols="75" id="Description" maxlength="4000" name="Description" onchange="handleTextAreaElementChangeWithByteCheck(&#39;Description&#39;, 4000, 4000, &#39;remaining&#39;, &#39;over limit&#39;);" onclick="handleTextAreaElementChangeWithByteCheck(&#39;Description&#39;, 4000, 4000, &#39;remaining&#39;, &#39;over limit&#39;);" onkeydown="handleTextAreaElementChangeWithByteCheck(&#39;Description&#39;, 4000, 4000, &#39;remaining&#39;, &#39;over limit&#39;);" onkeyup="handleTextAreaElementChangeWithByteCheck(&#39;Description&#39;, 4000, 4000, &#39;remaining&#39;, &#39;over limit&#39;);" onmousedown="handleTextAreaElementChangeWithByteCheck(&#39;Description&#39;, 4000, 4000, &#39;remaining&#39;, &#39;over limit&#39;);" rows="6" tabindex="5" type="text" wrap="soft" ng-model="checklist.description"></textarea>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
+  <h1 class="ui-widget-header"> Checklist Admin Panel </h1>
+  <p class="note"> Drag and drop questions to re-order them. </p>
+  <li> 
+    <h1 id="checklist-edit"> Checklist Edit </h1>
+    <input type="button" value="New Checklist" ng-click="setNewPage(true)"></input>
+    <input type="button" value="Edit Checklist" ng-click="setNewPage(false)"></input>
+  </li>
   <div name="newPage" ng-show="newPage">
     <form name="newChecklistForm">
+      <li class="form-info">
+        <h1>Checklist Name</h1>
+        <input type="text" ng-model="checklist.name" name="formName" ng-required="true"></input>
+        <br/><br/>
+        <h1>Checklist Description</h1>
+        <input type="text" ng-model="checklist.description"></input>
+        <br/>
+      </li>
       <ol class="sortable" ui-sortable="true" ng-model="items">
         <li ng-repeat="item in items">
-          <h1> Question {{$index + 1}} </h1>
-          <br/><br/>
           <label> Type: </label>
           <select ng-model="item.Type__c" ng-options="type for type in types" ng-required="true"></select>
           <br/><br/>
@@ -171,39 +123,18 @@ $(function() {
           <br/><br/>
           <label> Photo Attachment: </label>
           <input type="checkbox" ng-model="item.Attach_Photo__c" name="O4"></input>
-          <br/>
-          <div ng-show="showValues(item)">
-            <p> Input multiple values for your question below using a comma to separate each individual value. </p>
-            <label> Values: </label>
-            <input type="text" ng-model="question.Values__c" name="Q1" ></input>
-            <br/>
-          </div>
-          <br/>
-          <input type='button' class="btn" value='Delete' ng-click='removeQuestion(item)'/>
+          <br/><br/>
+          <input type="text" ng-model="item.Values__c" name="Q1" ng-show="showValues(item)"></input>
+          <input type='button' value='Remove Question' ng-click='removeQuestion(item)'/>
           <br/>
         </li>
       </ol>
+      <br/>
+      <input type="button" value="Add Question" ng-click="addQuestion()"></input>
+      <input type="submit" value="Create" ng-click="newChecklist()"> </input>
     </form>
   </div>
-  <div class="bPageBlock brandSecondaryBrd bEditBlock secondaryPalette" id="footer">
-    <div class="pbBottomButtons">
-      <table border="0" cellpadding="0" cellspacing="0">
-        <tbody>
-          <tr>
-            <td class="pbTitle">
-              &nbsp;
-            </td>
-            <td class="pbButtonb" id="bottomButtonRow">
-              <input type="submit" class="btn" value="Save" ng-click="newChecklist()"> </input>
-              <input type="button" class="btn" value="Add Question" ng-click="addQuestion()"></input>
-              <input type="submit" class="btn" value="Cancel"> </input>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <!--<div id="editChecklist" ng-show="!newPage" >
+  <div id="editChecklist" ng-show="!newPage" >
     <li class="border-light">
       <h1>Choose a checklist to edit</h1>
       <select ng-model="checklistIndex" ng-change="setNewPage(false)">
@@ -236,12 +167,7 @@ $(function() {
           <label> Photo Attachment: </label>
           <input type="checkbox" ng-model="question.Attach_Photo__c" name="O4"></input>
           <br/><br/>
-          <div ng-show="showValues(question)">
-            <label> Values: </label>
-            <input type="text" ng-model="question.Values__c" name="Q1" ></input>
-            <p> Input multiple answer choices for your question using a comma to separate each individual option. </p>
-            <br/><br/>
-          </div>
+          <input type="text" ng-model="question.Values__c" name="Q1" ng-show="showValues(question)"></input>
           <input type="button" value="Remove Question" ng-click="deleteChecklistItem(question)"></input>
           <br/>
         </li>
@@ -250,7 +176,7 @@ $(function() {
     <br/>
     <input type="button" value="Add Question" ng-click="addQuestionEdit()"></input>
     <input type="submit" value="Update" ng-click="editChecklist()"></input>
-  </div>-->
+  </div>
 </div>
 </body>
 <script>
