--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -218,7 +218,7 @@ $(function() {
                   <div ng-show="showValues(item)">
                     <p> Input multiple values for your question below using a comma to separate each individual value. </p>
                     <label> Values: </label>
-                    <input type="text" ng-model="question.Values__c" name="Q1" ></input>
+                    <input type="text" ng-model="item.Values__c" name="Q1" ></input>
                     <br/>
                   </div>
                 </div>
