--- a/Checklist.html
+++ b/Checklist.html
@@ -128,7 +128,7 @@ id="todo"
 
   #new-div {
     position: fixed;
-    z-index: 2;
+    z-index: 3;
     width: 100%;
     height: 100%;
     top: 100%;
@@ -142,7 +142,7 @@ id="todo"
   }
 
   #two, #three, #five {
-    z-index: 2;
+    z-index: 3;
   }
 
   .spacer {
@@ -154,7 +154,7 @@ id="todo"
 
   #navbar {
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     height: 75px;
     top: 0px;
@@ -227,7 +227,7 @@ id="todo"
     color: #fff;
     text-align: center;
     text-decoration: none;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     height: 75px;
     bottom: 0px;
@@ -256,6 +256,43 @@ id="todo"
 
   .link:hover {
     cursor: pointer;
+  }
+
+  .bi-button-list {
+    float: left;
+    border-radius-top-left: 7px;
+    border-radius-bottom-left: 7px;
+    height: 43px;
+    width: 50%;
+  }
+
+  .bi-button-map {
+    float: left;
+    border-radius-top-left: 7px;
+    border-radius-bottom-left: 7px;
+    height: 43px;
+    width: 50%;
+
+  }
+
+  .openmap {
+    position: absolute;
+    z-index: 2;
+    opacity: 1;
+    bottom: 90px;
+    right: 15px;
+    width: 50px;
+    height: 50px;
+    padding: 5px;
+    background: url('{!$Resource.checklist_map}');
+    background-size: cover;
+    background-color: #8cd250;
+  }
+
+  .openmap-active {
+    background: url('{!$Resource.checklist_list}');
+    background-size: cover;
+    background-color: #8cd250;
   }
 
   .x {
@@ -288,6 +325,14 @@ id="todo"
   }
 
   #hide-map {
+    position: absolute;
+    z-index: 99;
+    opacity: 1;
+    bottom: 90px;
+    right: 15px;
+    width: 20px;
+    height: 20px;
+    padding: 20px;
     opacity: 0;
     background: #8cd250;
   }
@@ -762,7 +807,7 @@ id="todo"
     -webkit-animation-name: flipInY;
     animation-name: flipInY;
   }
-
+  
   @-webkit-keyframes flipOutY {
     0% {
       -webkit-transform: rotateY(0deg);
@@ -771,8 +816,8 @@ id="todo"
     }
 
     100% {
-      -webkit-transform: rotateY(-135deg);
-      transform: rotateY(-135deg);
+      -webkit-transform: rotateY(135deg);
+      transform: rotateY(135deg);
       opacity: 0;
     }
   }
@@ -786,9 +831,9 @@ id="todo"
     }
 
     100% {
-      -webkit-transform: rotateY(-135deg);
-      -ms-transform: rotateY(-135deg);
-      transform: rotateY(-135deg);
+      -webkit-transform: rotateY(135deg);
+      -ms-transform: rotateY(135deg);
+      transform: rotateY(135deg);
       opacity: 0;
     }
   }
@@ -797,8 +842,8 @@ id="todo"
     -webkit-backface-visibility: visible !important;
     -ms-backface-visibility: visible !important;
     backface-visibility: visible !important;
-    -webkit-animation-name: flipInY;
-    animation-name: flipInY;
+    -webkit-animation-name: flipOutY;
+    animation-name: flipOutY;
   }
   </style>
 </head>
@@ -899,13 +944,13 @@ id="todo"
       </section>
       <section id="four">
         <div class="spacer"> </div>
-        <div class="link maplink" ng-click="revealMap()">
+        <!--<div class="link maplink" ng-click="revealMap()">
           <img class="map" src="{!$Resource.checklist_map}"></img>
           <p> View Map </p>
           <p class="blurb"> {{completedchecklistresponses.length}} Completed Checklists </p>
-        </div>
+        </div>-->
+        <div class="openmap" ng-click="revealMap()"></div>
         <div id="googleMap" ng-show="showMapView"></div>
-        <img class="x" id="hide-map" ng-show="showMapView" src="{!$Resource.checklist_x}" ng-click="showMapView = false;"></img>
         <div class="link maplink" ng-repeat="checklist in completedchecklistresponses">
           <img class="checklist" src="{!$Resource.checklist_checklist}"></img>
           <p> {{checklist.Checklist__r.Name}} </p>
@@ -941,7 +986,7 @@ var photoMap = {};
 
 var controllers = {};
 /** The main controller for Checklist. */
-controllers.PagesController = function ($scope) {
+controllers.PagesController = function ($scope, $timeout) {
   /** List of all Checklist types. */
   $scope.checklists = {!Checklists};
   /** List of Checklist Items. */
@@ -963,17 +1008,30 @@ controllers.PagesController = function ($scope) {
 
   /** Reveals the map on the screen. */
   $scope.revealMap = function() {
-    document.getElementById('googleMap').style.display="block";
-    $scope.showMapView = true;
-    map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-    google.maps.event.trigger(map, 'resize');
-    $("#googleMap").addClass("animated");
-    $("#googleMap").addClass("flipInY");
-    $(".x").addClass("x-active");
-    createMarkers();
+    var hideMap = function() {
+      $scope.showMapView = false;
+    }
+
+    if ($scope.showMapView == false) {
+      document.getElementById('googleMap').style.display="block";
+      $scope.showMapView = true;
+      map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+      google.maps.event.trigger(map, 'resize');
+      $("#googleMap").removeClass("animated");
+      $("#googleMap").removeClass("flipOutY");
+      $("#googleMap").addClass("animated");
+      $("#googleMap").addClass("flipInY");
+      $(".openmap").addClass("openmap-active");
+      createMarkers();
+    } else {
+      $("#googleMap").removeClass("animated");
+      $("#googleMap").removeClass("flipInY");
+      $("#googleMap").addClass("animated");
+      $("#googleMap").addClass("flipOutY");
+      $timeout(hideMap, 800);
+      $(".openmap").removeClass("openmap-active");
+    }
   }
-
-
 
   /** Returns all the pending Checklist Responses. */
   var getPendingChecklistResponses = function() {
@@ -1338,7 +1396,7 @@ function escapeHtml(string) {
 <style type="text/css">
 html { height: 100% }
 body { height: 100%; margin: 0; padding: 0 }
-#googleMap { position: absolute; left: 0; top: 0; height: 100%; width: 100%; z-index: 98;}
+#googleMap { position: absolute; left: 0; top: 0; height: 100%; width: 100%; z-index: 1;}
 </style>
 
 <script>
