--- a/Checklist.html
+++ b/Checklist.html
@@ -128,7 +128,7 @@ id="todo"
 
   #new-div {
     position: fixed;
-    z-index: 3;
+    z-index: 4;
     width: 100%;
     height: 100%;
     top: 100%;
@@ -141,8 +141,12 @@ id="todo"
     left: 0%;
   }
 
+  #one {
+    z-index: 2;
+  }
+
   #two, #three, #five {
-    z-index: 3;
+    z-index: 4;
   }
 
   .spacer {
@@ -154,7 +158,7 @@ id="todo"
 
   #navbar {
     position: fixed;
-    z-index: 2;
+    z-index: 3;
     width: 100%;
     height: 75px;
     top: 0px;
@@ -227,7 +231,7 @@ id="todo"
     color: #fff;
     text-align: center;
     text-decoration: none;
-    z-index: 2;
+    z-index: 3;
     width: 100%;
     height: 75px;
     bottom: 0px;
@@ -277,7 +281,7 @@ id="todo"
 
   .openmap {
     position: absolute;
-    z-index: 2;
+    z-index: 1;
     opacity: 1;
     bottom: 90px;
     right: 15px;
@@ -322,19 +326,6 @@ id="todo"
 
   .x:hover {
     cursor: pointer;
-  }
-
-  #hide-map {
-    position: absolute;
-    z-index: 99;
-    opacity: 1;
-    bottom: 90px;
-    right: 15px;
-    width: 20px;
-    height: 20px;
-    padding: 20px;
-    opacity: 0;
-    background: #8cd250;
   }
 
   .checklist {
@@ -949,7 +940,6 @@ id="todo"
           <p> View Map </p>
           <p class="blurb"> {{completedchecklistresponses.length}} Completed Checklists </p>
         </div>-->
-        <div class="openmap" ng-click="revealMap()"></div>
         <div id="googleMap" ng-show="showMapView"></div>
         <div class="link maplink" ng-repeat="checklist in completedchecklistresponses">
           <img class="checklist" src="{!$Resource.checklist_checklist}"></img>
@@ -965,6 +955,7 @@ id="todo"
         </div>
         <a class="link last" id="return" data-section="one" href="#"> Return </a>
       </section>
+      <div class="openmap" ng-click="revealMap()"></div>
     </div>
   </div>
 </div>
