--- a/Checklist.html
+++ b/Checklist.html
@@ -280,7 +280,7 @@ id="todo"
   }
 
   .openmap {
-    position: absolute;
+    position: fixed;
     z-index: 1;
     opacity: 1;
     bottom: 90px;
